# lib-router

./: .cspell.project-words.txt  .env.base  .gitignore  .terraform_init  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pr-rebase.yml
docs/: sdd.md
src/: lib.rs
src/algorithms/: graph.rs
src/types/: edge.rs  location.rs  node.rs  router.rs  status.rs
src/utils/: generator.rs  graph.rs  haversine.rs  router_state.rs  schedule.rs
tests/: integration_test.rs
